CDPortfolio/wwwroot/css/styles.css
.dollarSignIcon{
    position: relative;
}

.dollarSignIcon > i {
    position: absolute;
    display: block;
    transform: translate(0, -50%);
    top: 50%;
    pointer-events: none;
    width: 25px;
    text-align: center;
    font-style: normal;
}

.dollarSignIcon > input {
    padding-left: 25px;
    padding-right: 0;
}

